manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: bootcampapp 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bootcampapp
  template:
    metadata:
      labels:
        app: bootcampapp 
    spec:
      containers:
        - name: bootcampapp 
          image: bootcampapp2.azurecr.io/bootcampapp:138
          
          ports:
          - containerPort: 80
