manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: bootcampapp
spec:
    type: ClusterIP
    ports:
     - protocol: TCP 
       port: 80
       targetPort: 8080
    selector:
        app: bootcampapp
